# StyleShift

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  style_shift.py  train.py
config/: __init__.py  default_training.yaml  production_training.yaml  training_config.py
datasets/: __init__.py  style_transfer_dataset.py
docs/: cloud-training-guide.md  final-verification-report.md  github-upload-guide.md  gpu-training-requirements.md  implementation-plan.md  implementation-priority.md  local-training-rtx4070.md  model-download-guide.md  pretrained-models.md  project-final-status.md  project-status.md  training-guide.md  training-requirements.md  using-official-model.md  wave-1-summary.md  wave-2-complete.md  wave-2-progress.md  wave-2-vgg-fixed.md  web-ui-chinese-localization.md  web-ui-setup.md
scripts/: download_datasets.py  download_models.py  download_pretrained.py
style_shift/: __init__.py
style_shift/cli/: __init__.py  main.py
style_shift/core/: __init__.py  config.py  postprocess.py  preprocess.py  style_transfer.py
style_shift/models/: __init__.py  adain.py  decoder.py  loss.py  vgg.py
style_shift/utils/: __init__.py  device.py  image_io.py  model_manager.py
tests/: __init__.py  conftest.py  test_adain.py  test_config.py  test_decoder.py  test_device.py  test_image_io.py  test_integration.py  test_loss.py  test_model_manager.py  test_vgg.py
utils/: training_utils.py
